Fixing action button on collaps stripe

--- a/bootstrap/less/bootstrap.css
+++ b/bootstrap/less/bootstrap.css
@@ -5266,11 +5266,23 @@ a {
   box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.04);
   border-color: #dadada;
 }
+.accordion-heading {
+  display: block;
+  position: relative;
+}
 .accordion-heading a {
   font-weight: bold;
 }
 .accordion-body.in.collapse {
   min-height: 85%;
+}
+.actions {
+  display: block;
+  position: absolute;
+  right: 3px;
+}
+.actions #saveButton {
+  margin: 10px 5px;
 }
 .editor {
   position: relative;
@@ -5392,8 +5404,9 @@ a {
 }
 #widget_zone {
   width: 40%;
-  height: 100%;
   padding: 0;
+  padding-right: 100px;
+  height: 100%;
   float: left;
 }
 .fullheight {
