--- a/bootstrap/less/main.less
+++ b/bootstrap/less/main.less
@@ -12,12 +12,26 @@ a {
     border-color: rgb(218, 218, 218);
 
 }
-.accordion-heading a {
+.accordion-heading {
+    display: block;
+    position: relative;
+    a {
     font-weight: bold;
+    }
 }
 .accordion-body.in.collapse {
     min-height:85%;
 }
+.actions {
+display: block;
+position: absolute;
+right: 3px;
+#saveButton {
+    margin: 10px 5px; 
+}
+}
+
+
 .editor { 
         position: relative;
         top: 0;
@@ -147,8 +161,10 @@ a {
     
 #widget_zone {
         width: 40%;
-        height: 100%;
         padding: 0;
+        padding-right: 100px;
+        height: 100%;
+        
         float: left;
    
 } 
